--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         color: white;
         text-decoration: none;
       }
+      .active {
+        background-color: rgba(255, 255, 255, 0.678);
+        color: black;
+      }
     </style>
   </head>
   <body>
