--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         background-color: rgba(255, 255, 255, 0.678);
         color: black;
       }
+      .link {
+        color: blue;
+      }
+      .link:hover {
+        cursor: pointer;
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
